# auto-appeal-agent

./: .env.template  .gitignore  Makefile  README.md  pyproject.toml
docs/: ARCHITECTURE.md  GLOSSARY.md  WHY.md
fixtures/case_01_ozempic_bmi34/: expected.json  patient_chart.txt
fixtures/case_02_brain_mri_headache/: expected.json  patient_chart.txt
fixtures/case_03_pt_extension/: expected.json  patient_chart.txt
fixtures/case_04_cgm_t2dm_insulin/: expected.json  patient_chart.txt
fixtures/case_05_adalimumab_ra/: expected.json  patient_chart.txt
fixtures/guidelines/: corpus.json
src/auto_appeal_agent/: __init__.py  anthropic_client.py  formatter.py  guideline_corpus.py  orchestrator.py  pdf_export.py  pdf_utils.py  prompt_safety.py  schemas.py
tests/: _cassettes.py  conftest.py  test_anthropic_client.py  test_api.py  test_chart_miner.py  test_denial_analyzer.py  test_fixtures.py  test_guideline_citer.py  test_guideline_corpus.py  test_independent_reviewer.py  test_letter_writer.py  test_orchestrator.py  test_pdf_export.py  test_pdf_utils.py  test_pipeline_cancellation.py  test_policy_reader.py  test_schemas.py
tests/cassettes/: test_chart_miner_finds_case_01_evidence.json  test_denial_analyzer_extracts_case_01.json  test_guideline_citer_returns_structured_output.json  test_independent_reviewer_flags_unsupported_citation.json  test_independent_reviewer_grades_well_formed_draft.json  test_letter_writer_produces_verifiable_appeal.json  test_orchestrator_runs_on_each_case_case_01_ozempic_bmi34.json  (+7 more)
ui/: next.config.ts  package-lock.json
ui/app/: layout.tsx  (+2 more)
(+14 files in other folders)
