[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "auto-appeal-agent"
version = "0.0.1"
description = "Prior Authorization Auto-Appeal Agent — built with Claude Opus 4.7"
requires-python = ">=3.9"
dependencies = [
    "pydantic>=2.6",
    "python-dotenv>=1.0",
    "fpdf2>=2.7",
    "anthropic>=0.40",
    "pymupdf>=1.24",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-mock>=3.12",
    "pytest-cov>=4.1",
]

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
# Skip integration tests by default so `pytest` never burns API credits unintentionally.
# Run them explicitly with `pytest -m integration` or `make test-integration`.
addopts = "-ra --strict-markers -m 'not integration'"
markers = [
    "integration: tests that call external services (Anthropic API) and cost money",
    "e2e: end-to-end pipeline tests across all fixtures",
]
